# llvm-project

./: ROADMAP.md  SESSION_LOG.md
.github/workflows/: cnxt-compiler-matrix.yml  cnxt-ide-integration.yml  cnxt-ownership-runtime-sanitizers.yml
clang-tools-extra/clangd/: CodeComplete.cpp  FindSymbols.cpp  GlobalCompilationDatabase.cpp  SemanticHighlighting.cpp
clang-tools-extra/clangd/refactor/: Tweak.cpp
clang-tools-extra/clangd/unittests/: CodeCompleteTests.cpp  FindSymbolsTests.cpp  GlobalCompilationDatabaseTests.cpp  SemanticHighlightingTests.cpp  SourceCodeTests.cpp  XRefsTests.cpp
clang/lib/Basic/: LangOptions.cpp  LangStandards.cpp
clang/lib/Driver/: Driver.cpp  Types.cpp
clang/lib/Frontend/: ASTUnit.cpp  CompilerInstance.cpp  CompilerInvocation.cpp  FrontendActions.cpp  FrontendOptions.cpp  InitPreprocessor.cpp
clang/lib/Lex/: PPDirectives.cpp
clang/lib/Parse/: ParseDecl.cpp  ParseDeclCXX.cpp  ParseExprCXX.cpp  ParseStmt.cpp  ParseTemplate.cpp
clang/lib/Sema/: DeclSpec.cpp  Sema.cpp  SemaDecl.cpp  SemaDeclCXX.cpp  SemaExpr.cpp  SemaExprMember.cpp  SemaType.cpp
clang/lib/Tooling/: InterpolatingCompilationDatabase.cpp
clang/test/CodeGenCXX/: cnxt-c-abi-ownership-marshalling.cpp  cnxt-c-abi-thunks.cpp  cnxt-construction.cpp  cnxt-interface-dispatch.cpp  cnxt-interface-ownership.cpp  cnxt-ownership-baseline.cpp  cnxt-ownership-cleanup-paths.cpp  cnxt-ownership-interop.cpp  cnxt-ownership-runtime.cpp  cnxt-share-widening.cpp  cnxt-shared-refcount.cpp  cnxt-unique-cleanup.cpp  cnxt-weak-nullability.cpp
clang/test/Driver/: cnxt-c-abi-mixed-interop.c  cnxt-driver.c  cnxt-hello-world.c  cnxt-interface-example.c  cnxt-ownership-example.c  cnxt-ownership-runtime.c
clang/test/Frontend/: cnxt.c
clang/test/Misc/: cnxt-fuzzer-corpus.test
clang/test/Parser/: cnxt-construction.cpp  cnxt-ffi-raw-pointers.cpp  cnxt-implements.cpp  cnxt-interface-decls.cpp  cnxt-ownership-baseline.cpp  cnxt-ownership-conversions.cpp  cnxt-ownership-runtime-surface.cpp  cnxt-ownership.cpp  cnxt-recovery.cpp  cnxt-restrictions.cpp  cnxt-shared-copy-rules.cpp  cnxt-shared-lowering.cpp  cnxt-templates.cpp  cnxt-unique-lowering.cpp  cnxt-unique-move-only.cpp  cnxt-weak-lock-required.cpp  cnxt-weak-lowering.cpp
clang/test/Preprocessor/: cnxt-no-include.c  cnxt-prelude.c
clang/test/SemaCXX/: cnxt-c-abi-pointer-guidance.cpp  cnxt-construction.cpp  cnxt-interface-bindings.cpp  cnxt-interface-carrier.cpp  cnxt-interface-conformance.cpp  cnxt-interface-diagnostics.cpp  cnxt-interface-ownership.cpp  cnxt-ownership-baseline.cpp  cnxt-ownership-escapes.cpp  (+2 more)
cnxt/: README.md
cnxt/docs/: acceptance-checklist.md  c-abi-migration.md  commit-plan.md  m3-00-feasibility.md  milestone-1.md  milestone-2.md  quickstart.md
cnxt/runtime/ownership/: CMakeLists.txt  README.md
cnxt/runtime/ownership/benchmarks/: ownership_dispatch_bench.cpp
cnxt/runtime/ownership/cmake/: expect_sanitizer_failure.cmake
cnxt/runtime/ownership/include/cnxt/runtime/: ownership.h
cnxt/runtime/ownership/src/: ownership_runtime.cpp
cnxt/runtime/ownership/tests/: ownership_runtime_smoke.cpp
cnxt/specs/: cnxt-build-command.md  cnxt-cache-layout.md  cnxt-construction-api.md  cnxt-fetcher-sources.md  cnxt-ffi-boundary.md  cnxt-fixits.md  cnxt-formatter-profile.md  cnxt-ide-ci.md  cnxt-interface-class.md  cnxt-lint-policy.md  cnxt-lockfile-schema.md  cnxt-manifest-schema.md  cnxt-ownership-runtime.md  cnxt-run-command.md  cnxt-test-command.md  cnxt-workspace-discovery.md
cnxt/tools/: cache_layout.py  cnxt_build.py  cnxt_format.py  cnxt_lint.py  cnxt_run.py  cnxt_test.py  dependency_graph.py  lockfile_generator.py  manifest_parser.py  package_fetcher.py  version_solver.py  workspace_discovery.py
(+51 files in other folders)
